--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "minnow_",
-    "slug": "minnow_",
+    "name": "MNNWS",
+    "slug": "MNNWS",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
