--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,12 +2,15 @@
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
     "strict": true,
+        "jsx": "react",
     "paths": {
       "@/*": [
         "./*"
       ]
     }
   },
+
+
   "include": [
     "**/*.ts",
     "**/*.tsx",
